After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780067 - Unable to sync Google Contacts
Unable to sync Google Contacts
Status: RESOLVED FIXED
Product: libgdata
Classification: Platform
Component: Google Contacts service
0.17.x
Other Linux
: Urgent major
: ---
Assigned To: libgdata-maint
libgdata-maint
: 783258 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-03-14 22:15 UTC by Tony James
Modified: 2017-08-07 08:19 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tony James 2017-03-14 22:15:14 UTC
I am running Fedora 25 and the issue I'm experiencing appears to be the same as BZ 732809 [1].  There appears to be an issue in libgdata version 0.17.7-1 which breaks the ability to sync Google Contacts.  The exact error is:

Unable to perform search.

The backend for this address book was unable to parse this query. Invalid request URI or header, or unsupported nonstandard parameter: <?xml version="1.0" encoding="UTF-8"?>
<errors xmlns="http://schemas.google.com/g/2005">
 <error>
  <domain>GData</domain>
  <code>invalid</code>
  <internalReason>Bad updated-min timestamp format: 2017-03-14T22:07:42.000001 00:00</internalReason>
 </error>
</errors>

The issue is fixed by downgrading to libgdata version 0.17.6-2.

[1] https://bugzilla.gnome.org/show_bug.cgi?id=732809
Comment 1 Philip Withnall 2017-03-15 00:16:17 UTC
I’ve pushed commit 684f95e8845be4f9efc434ea6456bee99b2303ac which reverts that change. Unfortunately, that’s not the entire story, because this now breaks Google Tasks.

I’ll take a look at fixing that when it’s not so late another evening. I’ll try and do a 0.17.9 release once that’s fixed.
Comment 2 Philip Withnall 2017-03-15 00:16:56 UTC
(In reply to Philip Withnall from comment #1)
> I’ll try and do a 0.17.9 release once that’s fixed.

I mean a 0.17.8 release. Sigh.
Comment 3 Rudolf Künzli 2017-04-03 08:31:22 UTC
Is there a time line when this bug will be fixed ?
Comment 4 Philip Withnall 2017-04-20 10:52:37 UTC
Fixed. Sorry for the delay. I’ll look at doing a 0.17.8 release shortly.

commit d10155034b0fa2e43e2889e55157798ce073f807
Author: Philip Withnall <withnall@endlessm.com>
Date:   Thu Apr 20 11:50:09 2017 +0100

    tasks: Re-add ISO 8601 formatting workaround for Tasks service
    
    This partially reverts commit 684f95e8845be4f9efc434ea6456bee99b2303ac
    for the Tasks service only, since it is the only service which currently
    requires a formatting workaround for ISO 8601 date timezones.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=780067
    
    Signed-off-by: Philip Withnall <withnall@endlessm.com>

 gdata/gdata-parser.c                        | 31 +++++++++++++++++++++++++++++++
 gdata/gdata-parser.h                        |  1 +
 gdata/services/tasks/gdata-tasks-query.c    | 10 +++++-----
 gdata/services/tasks/gdata-tasks-task.c     | 49 ++++++++++++++++++++++++++++++++++++++++++++-----
 gdata/services/tasks/gdata-tasks-tasklist.c | 50 ++++++++++++++++++++++++++++++++++++++++++++++++++
 gdata/tests/tasks.c                         | 34 +++++++++++++++++-----------------
 6 files changed, 148 insertions(+), 27 deletions(-)
Comment 5 Philip Withnall 2017-04-20 11:37:59 UTC
Version 0.17.8 released.
Comment 6 Rudolf Künzli 2017-04-20 11:59:07 UTC
Great news !!!
Thanks a lot !
Comment 7 Philip Withnall 2017-05-31 08:29:07 UTC
*** Bug 783258 has been marked as a duplicate of this bug. ***
Comment 8 Khurshid Alam 2017-08-04 19:55:45 UTC
I don't know if it's related, but with this evolution doesn't import new tasks from google any more. Evolution->Google works and initial import works, but after initial sync, that Google->Evolution doesn't work. Can anyone confirm?
Comment 9 Philip Withnall 2017-08-07 08:19:55 UTC
(In reply to Khurshid Alam from comment #8)
> I don't know if it's related, but with this evolution doesn't import new
> tasks from google any more. Evolution->Google works and initial import
> works, but after initial sync, that Google->Evolution doesn't work. Can
> anyone confirm?

Please file a new bug report about this, and include the version numbers of Evolution, evolution-data-server and libgdata. Reopening an unrelated bug from 3 months ago is not helpful. Thanks.