tasks: Re-add ISO 8601 formatting workaround for Tasks service

This partially reverts commit 684f95e8845be4f9efc434ea6456bee99b2303ac
for the Tasks service only, since it is the only service which currently
requires a formatting workaround for ISO 8601 date timezones.

https://bugzilla.gnome.org/show_bug.cgi?id=780067

Signed-off-by: Philip Withnall <withnall@endlessm.com>